// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<div
  class="wp-components-scrollable css-d4wazc"
  data-g2-c16t="true"
  data-g2-component="Scrollable"
>
  <div
    class="css-1qs21wj"
    data-g2-component="ScrollableContent"
  >
    Some people are worth melting for.
  </div>
</div>
`;

exports[`props should render smoothScroll 1`] = `
<div
  class="wp-components-scrollable css-pv1w1q"
  data-g2-c16t="true"
  data-g2-component="Scrollable"
>
  <div
    class="css-1qs21wj"
    data-g2-component="ScrollableContent"
  >
    Some people are worth melting for.
  </div>
</div>
`;
